Fix line breaking in Buy shares block on tablet (15)

--- a/src/scss/_dao.scss
+++ b/src/scss/_dao.scss
@@ -271,7 +271,7 @@
     }
 }
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 1430px) {
     .shares-block {
         flex-wrap: wrap;
     }
